--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "firebase": "^11.4.0",
+    "firebase-admin": "^13.1.0",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
