--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-quill": "^2.0.0"
+  },
+  "devDependencies": {
+    "@types/css-modules": "^1.0.5",
+    "@types/node": "^22.13.9",
+    "@types/react": "^19.0.10",
+    "typescript": "^5.8.2"
   }
 }
